Basic profiles for Nox. Added the styling for the IP Search Page to Nox. Moved the bgavatars related styling from Nox's panel.css to main.css
Hide the Extended Notifications Page from the Account Manager as it's a distraction for now.

--- a/templates/account_menu.html
+++ b/templates/account_menu.html
@@ -7,7 +7,7 @@
 	<div class="colstack_item rowmenu">
 		<div class="rowitem passive"><a href="/user/edit/password/">{{lang "account_menu_password"}}</a></div>
 		<div class="rowitem passive"><a href="/user/edit/email/">{{lang "account_menu_email"}}</a></div>
-		<div class="rowitem passive"><a href="/user/edit/notifications/">{{lang "account_menu_notifications"}}</a> <span class="account_soon">Coming Soon</span></div>
+		<!--<div class="rowitem passive"><a href="/user/edit/notifications/">{{lang "account_menu_notifications"}}</a> <span class="account_soon">Coming Soon</span></div>-->
 		{{/** TODO: Add an alerts page with pagination to go through alerts which either don't fit in the alerts drop-down or which have already been dismissed. Bear in mind though that dismissed alerts older than two weeks might be purged to save space and to speed up the database **/}}
 	</div>
 </nav>
