--- a/templates/panel_forum_edit_perms.html
+++ b/templates/panel_forum_edit_perms.html
@@ -7,7 +7,7 @@
 		<div class="rowitem"><h1>{{.Name}}{{lang "panel_forum_head_suffix"}}</h1></div>
 	</div>
 	<form action="/panel/forums/edit/perms/adv/submit/{{.ForumID}}-{{.GroupID}}?session={{.CurrentUser.Session}}" method="post">
-		<div class="colstack_item rowlist formlist panel_forum_perms">
+		<div class="colstack_item rowlist formlist the_form panel_forum_perms">
 			{{range .Perms}}
 			<div class="formrow">
 				<div class="formitem">
