--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -257,6 +257,7 @@ h2 {
 .quick_create_form .topic_content_row textarea {
 	width: 100%;
 	height: 60px;
+	resize: vertical;
 }
 .quick_create_form .quick_button_row .formitem {
 	display: flex;
@@ -268,6 +269,7 @@ h2 {
 .quick_create_form #input_content {
 	width: 100%;
 	height: 100px;
+	resize: vertical;
 }
 
 .more_topic_block_initial {
@@ -276,11 +278,8 @@ h2 {
 .more_topic_block_active {
 	display: block;
 }
-.hide_ajax_topic {
+.hide_ajax_topic, .auto_hide, .show_on_edit:not(.edit_opened), .hide_on_edit.edit_opened {
 	display: none !important;
-}
-.auto_hide, .show_on_edit {
-	display: none;
 }
 
 .topic_list_title_block {
@@ -420,7 +419,7 @@ h2 {
 	display: block;
 }
 
-input, select, button, .formbutton, .panel_right_button, textarea {
+input, select, button, .formbutton, .panel_right_button:not(.has_inner_button), textarea {
 	border-radius: 3px;
 	background: rgb(90,90,90);
 	color: rgb(200,200,200);
@@ -447,7 +446,7 @@ input, select {
 	margin-left: 3px;
 	margin-bottom: 4px;
 }
-button, .formbutton, .panel_right_button {
+button, .formbutton, .panel_right_button:not(.has_inner_button) {
 	background: rgb(110,110,210);
 	color: rgb(250,250,250);
 	font-family: "Segoe UI";
@@ -466,6 +465,10 @@ button, .formbutton, .panel_right_button {
 }
 .form_button_row {
 	margin-top: 10px;
+}
+.formitem a {
+	margin-bottom: 5px;
+	display: block;
 }
 
 .login_mfa_token_row .formlabel {
@@ -609,7 +612,7 @@ button, .formbutton, .panel_right_button {
 	flex-direction: column;
 	color: #bbbbbb;
 }
-.post_item .user_content {
+.action_item .content_container, .post_item .user_content {
 	background-color: #444444;
 	border-radius: 3px;
 	padding: 16px;
@@ -770,9 +773,10 @@ input[type=checkbox]:checked + label .sel {
 }
 #poweredByHolder {
 	display: flex;
-	padding: 12px;
+	padding-top: 12px;
 	padding-left: 16px;
 	padding-right: 16px;
+	padding-bottom: 8px;
 }
 #poweredBy {
 	margin-right: auto;
