--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -11,7 +11,7 @@
 	background-color: #393939;
 }
 .rowmenu {
-	margin-left: 12px;
+	margin-left: 16px;
 }
 .submenu a:before {
 	content: "-";
@@ -33,14 +33,14 @@
 	margin-top: 8px;
 }
 .colstack_left .colstack_head a {
-	color: rgb(231, 231, 231);
+	color: rgb(210, 210, 210);
 }
 .rowmenu {
 	margin-bottom: 2px;
 	font-size: 17px;
 }
 .rowmenu a {
-	color: rgb(170, 170, 170);
+	color: rgb(180, 180, 180);
 }
 .menu_stats {
 	margin-left: 4px;
@@ -122,7 +122,7 @@ button, .formbutton {
 	/*background: rgb(110,110,210);
 	color: rgb(250,250,250);*/
 }
-button, .formbutton, .panel_right_button, #panel_users .profile_url {
+button, .formbutton, .panel_right_button:not(.has_inner_button), #panel_users .profile_url {
 	background: rgb(100,100,200);
 }
 #panel_users .panel_tag:not(.panel_right_button) {
@@ -131,7 +131,7 @@ button, .formbutton, .panel_right_button, #panel_users .profile_url {
 /*.formlabel {
 	font-size: 17px;
 }*/
-.panel_right_button, #panel_users .panel_tag:not(.panel_right_button), #panel_users .profile_url {
+.panel_right_button:not(.has_inner_button), #panel_users .panel_tag:not(.panel_right_button), #panel_users .profile_url {
 	margin-left: 2px;
 	padding: 5px;
 	padding-left: 6px;
@@ -205,6 +205,13 @@ button, .formbutton, .panel_right_button, #panel_users .profile_url {
 }
 .panel_submitrow .rowitem button:last-child {
 	margin-right: auto;
+}
+
+.has_inner_button button {
+	margin-right: 8px;
+}
+#forum_quick_perms .formitem, #forum_quick_perms .panel_floater {
+	display: flex;
 }
 
 .panel_plugin_meta {
