Added a missing form background for the User Editor in Nox.

--- a/templates/panel_user_edit.html
+++ b/templates/panel_user_edit.html
@@ -6,7 +6,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><h1>{{lang "panel_user_head"}}</h1></div>
 	</div>
-	<div id="panel_user" class="colstack_item">
+	<div id="panel_user" class="colstack_item the_form">
 		<form action="/panel/users/edit/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}" method="post">
 		<div class="formrow">
 			<div class="formitem formlabel"><a>{{lang "panel_user_name"}}</a></div>
