--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -282,9 +282,14 @@ h2 {
 	display: flex;
 }
 .quick_create_form .topic_meta .topic_name_row {
-	margin-left: 8px;
 	margin-bottom: 8px;
 	width: 100%;
+}
+.quick_create_form .topic_meta .topic_name_row:not(:only-child) {
+	margin-left: 8px;
+}
+.quick_create_form .topic_meta .topic_name_row:only-child input {
+	margin-left: 0px;
 }
 .quick_create_form .topic_meta .topic_name_row input {
 	width: 100%;
@@ -326,11 +331,12 @@ h2 {
 }
 .topic_list_title_block .optbox {
 	display: flex;
-	margin-left: auto;
+	/*margin-left: auto;*/
 	font-size: 17px;
 	margin-top: 3.5px;
 	margin-right: 16px;
 	margin-right: 18px;
+	width: 100%;
 }
 .topic_list_title_block .pre_opt:before {
 	content: "{{index .Phrases "topics_click_topics_to_select"}}";
