Made the filter opt visible again and started work on the filter drop-down menu.

--- a/themes/cosora/public/main.css
+++ b/themes/cosora/public/main.css
@@ -425,6 +425,9 @@ h1, h3 {
 .mod_opt .moderate_open {
 	display: none;
 }
+.filter_opt {
+	display: none;
+}
 
 .topic_create_form {
 	display: flex !important;
