Move the inline filter opt styles into Nox's main.css

--- a/templates/topics.html
+++ b/templates/topics.html
@@ -6,8 +6,8 @@
 	{{if ne .CurrentUser.ID 0}}
 		<div class="optbox">
 		{{if .ForumList}}
-			<div class="opt filter_opt" style="margin-right: auto;">
-				<a href="#" style="font-size: 18px;margin-left: 5px;"> / Most Recent <span style="margin-left: -5px;">▾</span></a>
+			<div class="opt filter_opt">
+				<a href="#" class="filter_opt_label"> / Most Recent <span class="filter_opt_pointy">▾</span></a>
 				<div class="link_select">
 					<div class="link_option link_selected">
 						<a href="/topics/">Most Recent</a>
