--- a/templates/topics.html
+++ b/templates/topics.html
@@ -7,13 +7,13 @@
 		<div class="optbox">
 		{{if .ForumList}}
 			<div class="opt filter_opt">
-				<a href="#" class="filter_opt_label link_label" data-for="topic_list_filter_select"> / Most Recent <span class="filter_opt_pointy">▾</span></a>
+				<a href="#" class="filter_opt_label link_label" data-for="topic_list_filter_select"> / {{lang "topic_list.most_recent_filter"}} <span class="filter_opt_pointy">▾</span></a>
 				<div id="topic_list_filter_select" class="link_select">
 					<div class="link_option link_selected">
-						<a href="/topics/">Most Recent</a>
+						<a href="/topics/">{{lang "topic_list.most_recent_filter"}}</a>
 					</div>
 					<div class="link_option">
-						<a href="/topics/most-viewed/">Most Viewed</a>
+						<a href="/topics/most-viewed/">{{lang "topic_list.most_viewed_filter"}}</a>
 					</div>
 				</div>
 			</div>
