--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -110,6 +110,11 @@ li a {
 	padding-bottom: 11px;
 	padding-left: 12px;
 }
+.user_box.has_alerts {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border: 1px solid #444444;
+}
 .user_box img {
 	display: block;
 	width: 36px;
