Added level progress indicators, still WIP. Fixed a bug where GetLevelScore wouldn't work and simplified it slightly. Removed the account_dash_next_level phrase. Added the account_dash_level phrase.

--- a/templates/account_own_edit.html
+++ b/templates/account_own_edit.html
@@ -21,7 +21,7 @@
 		</div>
 		<div id="dash_right" class="coldyn_item">
 			<div class="rowitem">{{if not .MFASetup}}<a href="/user/edit/mfa/setup/">{{lang "account_dash_2fa_setup"}}</a>{{else}}<a href="/user/edit/mfa/">{{lang "account_dash_2fa_manage"}}</a>{{end}} <span class="dash_security">{{lang "account_dash_security_notice"}}</span></div>
-			<div class="rowitem">{{lang "account_dash_next_level"}} <span class="account_soon">{{lang "account_coming_soon"}}</span></div>
+			<div class="rowitem">Level {{.CurrentUser.Level}}: [{{.CurrentScore}} / {{.NextScore}}] <span class="account_soon">{{lang "account_coming_soon"}}</span></div>
 		</div>
 		</div>
 	</main>
